# aggregation-tools

./: .COPYING_HEADER  .gitignore  .travis.yml  AUTHORS  CHANGELOG.rst  COPYING  README.md  TODO.md  pyproject.toml  serial_aggregator  setup.cfg  setup.py  sniffer_aggregator  tox.ini
.github/workflows/: continuous-integration.yml
iotlabaggregator/: __init__.py  common.py  connections.py  serial.py  sniffer.py  zeptopcap.py
iotlabaggregator/tests/: __init__.py  common_test.py  connections_test.py  serial_test.py  sniffer_test.py  zeptopcap_test.py
tests_utils/: COPYING_HEADER  check_license.sh  test-requirements.txt
